5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1708_3063.log
== TEST (2019-04-29 15:19:40) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if ((PO == 200) and (armadura == "INTEIRA")):
	resistencia = 30 * dado - 20
	print(resitencia)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = 15 * dado - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	resistencia = 20 * dado - 18
	print(resistencia)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:19:54) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if ((PO == 200) and (armadura == "INTEIRA")):
	resistencia = 30 * dado - 20
	print(resitencia)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = 15 * dado - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	resistencia = 20 * dado - 18
	print(resistencia)
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.173459
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:59) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if ((PO == 200) and (armadura == "INTEIRA")):
	resistencia = 30 * dado - 20
	print(resitencia)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = 15 * dado - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	resistencia = 20 * dado - 18
	print(resistencia)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:21:03) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if ((PO == 200) and (armadura == "INTEIRA")):
	resistencia = 30 * dado - 20
	print(resitencia)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = 15 * dado - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	resistencia = 20 * dado - 18
	print(resistencia)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:22:48) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if ((PO != 200) and (PO!= 50) and (PO != 100)):
	print("PO insuficiente")
elif ((PO == 200) and (armadura == "INTEIRA")):
	resistencia = 30 * dado - 20
	print(resitencia)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = 15 * dado - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	resistencia = 20 * dado - 18
	print(resistencia)

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:23:37) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if ((PO != 200) and (PO!= 50) and (PO != 100)):
	print("PO insuficiente")
elif ((PO == 200) and (armadura == "INTEIRA")):
	resistencia = (30 * dado) - 20
	print(resitencia)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = (15 * dado) - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	resistencia = (20 * dado) - 18
	print(resistencia)

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:24:12) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	resistencia = (30 * dado) - 20
	print(resitencia)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = (15 * dado) - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	resistencia = (20 * dado) - 18
	print(resistencia)

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:03) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	res = (30 * dado) - 20
	print(res)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = (15 * dado) - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	r = (20 * dado) - 18
	print(r)

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:55) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	res = (30 * dado) - 20
	print(res)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = (15 * dado) - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	r = (20 * dado) - 18
	print(r)
	elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- ERROR:
File "XXXX", line 14
    elif (1 < dado > 8):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:04) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	res = (30 * dado) - 20
	print(res)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = (15 * dado) - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	r = (20 * dado) - 18
	print(r)
elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:15) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	res = (30 * dado) - 20
	print(res)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = (15 * dado) - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	r = (20 * dado) - 18
	print(r)
elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:28:31) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	res = (30 * dado) - 20
	print(res)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = (15 * dado) - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	r = (20 * dado) - 18
	print(r)
elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- EXECUTION TIME:
0.184531
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:34) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	res = (30 * dado) - 20
	print(res)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = (15 * dado) - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	r = (20 * dado) - 18
	print(r)
elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:35) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	res = (30 * dado) - 20
	print(res)
elif ((PO == 50) and (armadura == "MALHA")):
	resistencia = (15 * dado) - 1
	print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
	r = (20 * dado) - 18
	print(r)
elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:26) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	res = (30 * dado) - 20
	print(res)
	if ((PO == 50) and (armadura == "MALHA")):
		resistencia = (15 * dado) - 1
		print(resistencia)
	elif ((PO == 100) and  (armadura == "PLACA")):
		r = (20 * dado) - 18
		print(r)
	elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:48) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
dado = int(input("digite: "))

if((PO == 200) and (armadura == "INTEIRA")):
	res = (30 * dado) - 20
	print(res)
elif ((PO == 50) and (armadura == "MALHA")):
		resistencia = (15 * dado) - 1
		print(resistencia)
elif ((PO == 100) and  (armadura == "PLACA")):
		r = (20 * dado) - 18
		print(r)
elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:35:52) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
d = int(input("digite: "))
if ((PO == 200) and (PO == 50) and (PO == 100)):
	if((PO == 200) and (armadura == "INTEIRA")):
		res = (30 * d) - 20
		print(res)
	elif ((PO == 50) and (armadura == "MALHA")):
		resistencia = (15 * d) - 1
		print(resistencia)
	elif ((PO == 100) and  (armadura == "PLACA")):
		r = (20 * d) - 18
		print(r)
	elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:23) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
d = int(input("digite: "))
if ((PO == 200) and (PO == 50) and (PO == 100)):
	if((PO == 200) and (armadura == "INTEIRA")):
		print(30 * d - 20)
	elif ((PO == 50) and (armadura == "MALHA")):
		resistencia = (15 * d) - 1
		print(15 * d - 1)
	elif ((PO == 100) and  (armadura == "PLACA")):
		print(20 * d - 18)
	elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:45) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
d = int(input("digite: "))
if ((PO == 200) and (PO == 50) and (PO == 100)):
	if((PO == 200) and (armadura == "INTEIRA")):
		res = (30 * d) - 20
		print(res)
	elif ((PO == 50) and (armadura == "MALHA")):
		res = (15 * d) - 1
		print(res)
	elif ((PO == 100) and  (armadura == "PLACA")):
		res = (20 * d)- 18
		print(res)
	elif (1 < dado > 8):
		print("Entrada invalida")
else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:52) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
d = int(input("digite: "))
d = 1 <= dado => 8
if ((PO == 200) and (PO == 50) and (PO == 100)):
	if((PO == 200) and (armadura == "INTEIRA")):
		res = (30 * d) - 20
		print(res)
	elif ((PO == 50) and (armadura == "MALHA")):
		res = (15 * d) - 1
		print(res)
	elif ((PO == 100) and  (armadura == "PLACA")):
		res = (20 * d)- 18
		print(res)

else:
	print("PO insuficiente")

-- ERROR:
File "XXXX", line 4
    d = 1 <= dado => 8
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:13) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
d = int(input("digite: "))
d = (1 <= d and d => 8)
if ((PO == 200) and (PO == 50) and (PO == 100)):
	if((PO == 200) and (armadura == "INTEIRA")):
		res = (30 * d) - 20
		print(res)
	elif ((PO == 50) and (armadura == "MALHA")):
		res = (15 * d) - 1
		print(res)
	elif ((PO == 100) and  (armadura == "PLACA")):
		res = (20 * d)- 18
		print(res)

else:
	print("PO insuficiente")

-- ERROR:
File "XXXX", line 4
    d = (1 <= d and d => 8)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:25) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
d = int(input("digite: "))
d = ((1 <= d) and (d => 8))
if ((PO == 200) and (PO == 50) and (PO == 100)):
	if((PO == 200) and (armadura == "INTEIRA")):
		res = (30 * d) - 20
		print(res)
	elif ((PO == 50) and (armadura == "MALHA")):
		res = (15 * d) - 1
		print(res)
	elif ((PO == 100) and  (armadura == "PLACA")):
		res = (20 * d)- 18
		print(res)

else:
	print("PO insuficiente")

-- ERROR:
File "XXXX", line 4
    d = ((1 <= d) and (d => 8))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:08) 
-- CODE:
PO = int(input("digite: "))
armadura = input("digite: ")
d = int(input("digite: "))

if ((PO == 200) and (PO == 50) and (PO == 100)):
	if((PO == 200) and (armadura == "INTEIRA")):
		res = (30 * d) - 20
		print(res)
	elif ((PO == 50) and (armadura == "MALHA")):
		res = (15 * d) - 1
		print(res)
	elif ((PO == 100) and  (armadura == "PLACA")):
		res = (20 * d)- 18
		print(res)

else:
	print("PO insuficiente")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
